# traefik-etcd

./: .env.example  .envrc  .envrc.example  .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  devbox.json  dist-workspace.toml  index.html  oranda.json  schema.json  sqlx-data.json
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  zshrc
.devcontainer/etcd/: Dockerfile  bashrc  etcd-entrypoint.sh  etcd-healthcheck.sh  etcd.yml  setup-etcd.sh
.devcontainer/redirector/: Dockerfile
.devcontainer/traefik/: .htpasswd  Dockerfile  Dockerfile.prod  dynamic.example.yml  dynamic.yml  traefik-entrypoint.sh  traefik.example.yml  traefik.yml
.github/: build-setup.yml
.github/workflows/: build-setup.yml  release.yml  web.yml
.sqlx/: query-01494a791e830279608cbf37e30057ca17e1b74605e80e26daf8f4f86f3b66eb.json  query-12ca0bbeecdef6a34f644d2939ea3651679d12f41e846b061799e183b4ae891e.json  query-1e8f330f689356024db36bbaf9bf284935166000ceefc15c8a83407cff51b7fa.json  query-2741d1b707168a4199013525a146689212d8cfdfec8632847f47bbf1fbba80ce.json  query-2982b43ea2de51e3a4c9c94398d512def06dfa0fa34fb0522546b95a6022b90d.json  query-3967257b0661b8e2c98007cf65e58790e2da490d52f37bf5fd30c77692d1f7db.json  query-443be353572d5e7b86cacbddc75adc1d07d743f70e72b953534152a948b65605.json  query-4a87b377a6a120d29b0990a2be11c09ca8a20c37cfc3682089c44d8e30690f18.json  query-55149064d99408d1146beee57c774f94576dc20195f484091fd8f59240f66117.json  query-5cf2b28b76f7be74c0ab22adb2461de5782aea3dd0e479e30483eb7c67411694.json  query-5eeccc4bc3553405396b83597f3a2c766384dadf52244e18449e84a61fc320ef.json  query-60c31503c89b3419951749c3551d8915359430c363da80a68d012fbfd0a46cae.json  query-839ad5cc9429a2f6a20e9bc95bfc348cc8ce8e7f7fe73e4e0aa09284430fb390.json  query-a5d9f37a9f4e4ff34ea09a7fd85f6106fe61392f06f58304a906629151d71a86.json  query-aea14b5616c4941a7450936acdccb7306045e0ef48a64cf8f9321c3606f51277.json  query-b1a17d32da6f65e32c97ff12bcdc8c12fa1e289d009228a6b6af614c6de47391.json  query-e6e22c66494fa51369f95480e7f4a6aa8588fde65bbfe50ad4348b6d94ece24d.json
config/: config-devcontainer.yml  config.yml  simple.yml
config/tls/: ca-config.json  ca-csr.json  ca.csr  csr-template.json  etcd-peer.csr  etcd.csr  traefik-etcd-client.csr  traefik.csr
crates/export-type/: Cargo.toml  README.md
crates/export-type/src/: case.rs  error.rs  exporter.rs  lib.rs  parsers.rs
crates/export-type/src/exporter/: tests.rs
crates/export-type/src/lang/: mod.rs  typescript.rs
crates/export-type/src/lang/typescript/: tests.rs
crates/export-type/tests/: integration_test.rs
frontend/: deploymentconfig.ts  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/: app.css
frontend/src/lib/: fetcher.ts
frontend/src/lib/components/: AreYouSure.svelte  DeploymentConfig.svelte  HostConfig.svelte  MiddlewareConfig.svelte  PathConfig.svelte  TraefikConfig.svelte
frontend/src/lib/components/config/: ConfigEditor.svelte  ConfigList.svelte  ConfigSelector.svelte  DeleteConfig.svelte  DiffViewer.svelte  DraftDialog.svelte  EtcdConfig.svelte  HostCard.svelte  HostEditor.svelte  HostSection.svelte  HostsConfig.svelte  MiddlewareEditor.svelte  PathEditor.svelte  TemplateSelector.svelte  VersionHistory.svelte  VisualConfigEditor.svelte
frontend/src/lib/components/configList/: ConfigCard.svelte
frontend/src/lib/components/configs.backup/: ConfigActions.svelte  ConfigEditor.svelte  ConfigHeader.svelte  ConfigList.svelte  (+5 more)
frontend/src/lib/stores/: configListStore.ts  configStore.ts  draftStore.ts  etcdStore.ts  pageStore.ts  persistence.ts
frontend/src/lib/types/: index.ts  traefik.ts
frontend/src/lib/utils/: fetching.ts  logging.ts  parsing.ts
frontend/src/routes/: +page.svelte  +page.ts
frontend/src/routes/(editor)/: +layout.svelte
frontend/src/routes/(homepage)/: +page.server.ts  +page.svelte
frontend/src/routes/config-list/: +page.svelte
frontend/src/routes/configs/: +page.svelte
frontend/src/routes/editor/: +layout.svelte  +page.svelte
frontend/src/stores/: traefikConfigStore.ts
frontend/templates/: config.yml  simple.yml
migrations/: 20241124033729_initial_schema.sql
prompts/: composer.txt
public/: changelog.rss  index.html
public/changelog/: index.html
scripts/: colors.sh  devex.sh  gen-certs.sh  revert.sh
src/: commands.rs  config.rs  error.rs  lib.rs  log.rs  main.rs  test_helpers.rs  tracing.rs
src/cli/: apply.rs  clean.rs  codegen.rs  diff.rs  generate.rs  get.rs  graph.rs  load.rs  mod.rs  render.rs  serve.rs  show.rs  ssl.rs  tofile.rs  validate.rs
src/commands/: apply.rs  clean.rs  diff.rs  get.rs  initialize.rs  show.rs  validate.rs
src/common/: changes.rs  error.rs  etcd.rs  mod.rs  rollback.rs
src/config/: base_structs.rs  core_traits.rs  deployment.rs  diff.rs  entry_points.rs  headers.rs  health_check.rs  host.rs  middleware.rs  mod.rs  redirector.rs  selections.rs  services.rs  traefik.rs  traefik_config.rs  util.rs
src/core/: client.rs  etcd_trait.rs  mod.rs  rules.rs  templating.rs  util.rs
src/etcd/: backend.rs  bluegreen.rs  common.rs  etcd.rs  global.rs  healthcheck.rs  host.rs  load_balancer.rs  middleware.rs  mod.rs  paths.rs  router.rs  service.rs  testendpoint.rs  util.rs
src/features/: etcd.rs  mod.rs
src/features/api/: controllers.rs  db.rs  error.rs  mod.rs  models.rs  server.rs  test_api_helpers.rs
src/features/api/controllers/: configs.rs  deployments.rs  health_check.rs  host.rs  mod.rs  selection.rs  templates.rs
src/features/api/db/: macs.rs  test_database.rs
src/features/api/middlewares/: authenticator.rs  usersecure.rs
src/features/api/models/: config_models.rs  deployment_protocol_model.rs  deployments.rs  health_check.rs  host.rs  mod.rs  selection.rs  services.rs  templates.rs
src/features/api/routes/: api.rs  auth.rs  extractor.rs  frontend.rs  mod.rs  session.rs
src/features/api/types/: mod.rs
src/features/api/utils/: datetime_utils.rs  file_loader.rs  mod.rs
src/features/etcd/: diff.rs
templates/: index.ts
test/configs/: simple.yml
wix/: main.wxs
(+31 files in other folders)
