[package]
name = "traefikctl"
version = "0.2.5"
edition = "2021"
repository = "https://github.com/auser/traefikctl"
description = "A CLI for managing traefik with etcd (and more)"
homepage = "https://github.com/auser/traefikctl"
authors = ["Ari <me@ari.io>"]
license = "MIT OR Apache-2.0"
keywords = ["traefik", "etcd"]

[[bin]]
name = "traefikctl"
path = "bin/traefikctl.rs"


[package.metadata.wix]
upgrade-guid = "F4761C69-4FF9-4810-AF9E-2AF110D7CF42"
path-guid = "28239E20-C62B-43AD-BC64-61911768BEF6"
license = false
eula = false

[dependencies]
async-trait = "0.1.83"
chrono = { version = "0.4.38", optional = true }
clap = { version = "4.5.21", features = ["derive", "env"], optional = true }
color-eyre = { version = "0.6.3", optional = true }
config = { version = "0.14.1" }
convert_case = "0.6.0"
etcd-client = { version = "0.14.0", features = [
  "tls",
  "tls-roots",
], optional = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
thiserror = "2.0.3"
time = { version = "0.3.36", optional = true }
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
tracing = { version = "0.1.40", optional = true }
tracing-appender = { version = "0.2.3", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true, features = [
  "env-filter",
  "time",
] }

[features]
default = ["cli", "tracing", "etcd"]
cli = ["dep:color-eyre", "dep:clap"]
tracing = [
  "dep:chrono",
  "dep:time",
  "dep:tracing",
  "dep:tracing-appender",
  "dep:tracing-subscriber",
]
etcd = ["dep:etcd-client"]

[build-dependencies]
protoc = "2.28.0"
cargo-dist = "0.25.1"

[dev-dependencies]
pretty_assertions = "1.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.scripts]
dev = """
npm run watch & cargo leptos watch
"""
