[package]
name = "traefikctl"
version = "0.2.29"
edition = "2021"
repository = "https://github.com/auser/traefikctl"
description = "A CLI for managing traefik with etcd (and more)"
homepage = "https://github.com/auser/traefikctl"
authors = ["Ari <me@ari.io>"]
license = "MIT OR Apache-2.0"
keywords = ["traefik", "etcd"]
exclude = ["generated"]

[[bin]]
name = "traefikctl"
path = "bin/traefikctl.rs"


[package.metadata.wix]
upgrade-guid = "F4761C69-4FF9-4810-AF9E-2AF110D7CF42"
path-guid = "28239E20-C62B-43AD-BC64-61911768BEF6"
license = false
eula = false

[dependencies]

async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["tower-log"], optional = true }
chrono = { version = "0.4.38", optional = true, features = ["serde"] }
clap = { version = "4.5.21", features = ["derive", "env"], optional = true }
color-eyre = { version = "0.6.3", optional = true }
config = { version = "0.14.1" }
convert_case = { version = "0.6.0", optional = true }
etcd-client = { version = "0.14.0", features = [
  "tls",
  "tls-roots",
], optional = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
thiserror = "2.0.3"
time = { version = "0.3.36", optional = true }
tokio = { version = "1.41.1", features = [
  "rt-multi-thread",
  "macros",
  "process",
] }
tracing = { version = "0.1.40", optional = true }
tracing-appender = { version = "0.2.3", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true, features = [
  "env-filter",
  "time",
] }
utoipa = { version = "5.2.0", optional = true, features = [
  "axum_extras",
  "yaml",
  "debug",
  "time",
  "chrono",
] }
utoipa-swagger-ui = { version = "8.0.3", optional = true, features = [
  "axum",
  "debug",
] }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-native-tls",
  "json",
  "mysql",
  "macros",
  "derive",
  "chrono",
  "time",
  "macros",
  "migrate",
], optional = true }
tower-http = { version = "0.6", features = [
  "trace",
  "cors",
  "add-extension",
  "fs",
], optional = true }
anyhow = "1.0.93"
dotenvy = "0.15.7"
once_cell = { version = "1.20.2", optional = true }
url = { version = "2.5.4", optional = true }
wait-timeout = { version = "0.2.0", optional = true }
env_logger = { version = "0.11.5", optional = true }
deadpool = { version = "0.12.1", optional = true, features = [
  "serde",
  "managed",
] }
futures-util = "0.3.31"
reqwest = { version = "0.12.9", optional = true }
tower = { version = "0.5", optional = true }
tower-sessions = { version = "0.13.0", optional = true }
hmac = { version = "0.12.1", optional = true }
jwt = { version = "0.16.0", optional = true }
sha2 = { version = "0.10.8", optional = true }
uuid = { version = "1.11.0", optional = true, features = ["serde"] }
argon2 = { version = "0.5.3", optional = true }
schemars = { version = "0.8.21", optional = true }
tempdir = { version = "0.3.7", optional = true }
tempfile = { version = "3.14.0", optional = true }
colored = { version = "2.1.0", optional = true }
export-type = { version = "0.1.3", optional = true }


[features]
default = ["cli", "tracing", "etcd", "api", "codegen"]
full = ["default", "tracing", "etcd", "api", "codegen"]
cli = ["dep:color-eyre", "dep:clap"]
gen = []
tracing = [
  "dep:chrono",
  "dep:time",
  "dep:tracing",
  "dep:tracing-appender",
  "dep:tracing-subscriber",
  "dep:env_logger",
]
etcd = ["dep:etcd-client"]
api = [
  "dep:chrono",
  "dep:axum",
  "dep:utoipa",
  "dep:utoipa-swagger-ui",
  "dep:sqlx",
  "dep:tower-http",
  "dep:once_cell",
  "dep:wait-timeout",
  "dep:url",
  "dep:env_logger",
  "dep:reqwest",
  "dep:tower",
  "dep:tower-sessions",
  "dep:hmac",
  "dep:jwt",
  "dep:sha2",
  "dep:uuid",
  "dep:argon2",
  "dep:schemars",
  "dep:tempfile",
  "dep:convert_case",
  "dep:colored",
]

codegen = ["export-type"]

[build-dependencies]
protoc = "2.28.0"
cargo-dist = "0.25.1"
# traefikctl = { path = ".", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4"
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.5.1", features = ["full"] }
hyper-tls = "0.6.0"
axum-test = { version = "16.4.0", features = ["reqwest"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
