[package]
name = "export-type"
version = "0.1.0"
edition = "2021"
description = "Export Rust types to other languages"
license = "MIT"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
thiserror = "2.0.3"
once_cell = "1.20.2"
pathdiff = "0.2.3"
convert_case = "0.6.0"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"
